Bug 365306 - Investment Transactions report Price and Amount in error
Summary: Investment Transactions report Price and Amount in error
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.8.0
Platform: Ubuntu Linux
: NOR major
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-07-10 01:21 UTC by Pete
Modified: 2018-03-28 08:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Pete 2016-07-10 01:21:51 UTC
The first buy price for each buy date is wrong.  Amount values are also wrong.  Total amount for each stock is consequently also wrong.

As a result, this report cannot be used to assess gains and losses for each security.  There does not appear to be any other way to get this info from KMM.


Reproducible: Always

Steps to Reproduce:
1.click on Reports icon in left vertical pane
2.expand 5. Investments
3.launch Investment Transactions Default Report


Actual Results:  
Incorrect Price and Amount values for many lines of data.  Commission handling appears to be confused.

Expected Results:  
Each line should be correct.  The Total should give the correct gain or loss for that security.
Comment 1 wojnilowicz 2017-02-17 20:34:56 UTC
Git commit 622dab3f94878c501518795aa00c102d10562a1a by Łukasz Wojniłowicz.
Committed on 17/02/2017 at 20:15.
Pushed by wojnilowicz into branch 'master'.

Revise investment transaction report

Summary:
Price of transaction should be taken from transaction and not from
stored prices.
Investment accounts should report asset split as main split for correct
amount value, as it contains fees.
Related: bug 373966
Signed-off-by: Łukasz Wojniłowicz <lukasz.wojnilowicz@gmail.com>

Differential Revision: https://phabricator.kde.org/D4445

Signed-off-by: Łukasz Wojniłowicz <lukasz.wojnilowicz@gmail.com>

M  +99   -45   kmymoney/reports/querytable.cpp
M  +7    -7    kmymoney/reports/tests/querytable-test.cpp
M  +1    -1    kmymoney/reports/tests/reportstestcommon.cpp

https://commits.kde.org/kmymoney/622dab3f94878c501518795aa00c102d10562a1a