Revise investment transaction report

Summary:
Price of transaction should be taken from transaction and not from
stored prices.
Investment accounts should report asset split as main split for correct
amount value, as it contains fees.
BUG:365306
BUG:373966
Signed-off-by: Łukasz Wojniłowicz <lukasz.wojnilowicz@gmail.com>

Differential Revision: https://phabricator.kde.org/D4445

Signed-off-by: Łukasz Wojniłowicz <lukasz.wojnilowicz@gmail.com>